[package]
name = "Rust_visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"
rodio = "~0.17"
cpal = "0.15"
spectrum-analyzer = "1.7"
bevy_egui = "0.27"
rfd = "0.14"
noise = "0.8.2"
symphonia = { version = "0.5.2", features = ["all-formats", "all-codecs"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
